--- a/display/template/index.html
+++ b/display/template/index.html
@@ -37,7 +37,7 @@
     {% for room in rooms %}
     <tr>
         <td>{{ room['name'] }}</td>
-        <td>{{ room['temp'] }}</td>
+        <td>{{ room['temp'] }}°C</td>
         <td>{{ room['updated'] }}</td>
     </tr>
     {% endfor %}
