New features * Added date to db * Increased default limits * Added date column for display

--- a/display/template/index.html
+++ b/display/template/index.html
@@ -42,10 +42,12 @@
     <tr>
         <td>{{ data['temperature'] }}°C</td>
         <td>{{ data['humidity'] }}%</td>
+        <td>{{ data['date'] }}</td>
         <td>{{ data['time'] }}</td>
     </tr>
     {% endfor %}
 </table>
+<br><br>
 {% endfor %}
 </body>
 </html>
