Fixes * Fixed display table

--- a/display/template/index.html
+++ b/display/template/index.html
@@ -36,6 +36,7 @@
     <tr>
         <th>Temperature</th>
         <th>Humidity</th>
+        <th>Date</th>
         <th>Time</th>
     </tr>
     {% for data in rooms[room] %}
