--- a/api/template/index.html
+++ b/api/template/index.html
@@ -77,7 +77,7 @@
                     <th>Date</th>
                     <th style="width:20%">Time</th>
                 </tr>
-                {% for data in rooms[room]|reverse %}
+                {% for data in rooms[room] %}
                 <tr>
                     <td>{{ data['temperature'] }}°C</td>
                     <td>{{ data['humidity'] }}%</td>
@@ -155,7 +155,7 @@
         let temps = []
         let humis = []
         let dates = []
-        for (let j = 0; j < rooms[room].length; j++) {
+        for (let j = rooms[room].length - 1; j >= 0; j--) {
             temps.push(rooms[room][j]['temperature']);
             humis.push(rooms[room][j]['humidity']);
             let date_time = rooms[room][j]['date'].split(",")[0] + " - " + rooms[room][j]['time'];
